--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   },
   "require": {
     "php": "^7.0",
-    "guzzlehttp/guzzle": "^7.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "ext-json": "*"
   }
 }
